Issue #2262 fixed Scrollbar missing in modal overlays

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -483,6 +483,7 @@ body {
 }
 
 .document-list-wrapper {
+    overflow: auto;
     display: flex;
     flex: 1;
     flex-direction: column;
